# cheby-tools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cfg_adastra.sh  check_python_env.py  compile_h5py.sh  discr_example.py  env.sh  env_h5py.sh  run_cmake.sh  tecio_example.py
cheby_tool/: __init__.py
discr/: __init__.py  discr_2d.py
examples/: Basic_stats_X_0p5_comparison.lay  Data_midwidth_comparison.lay  build_ercoftac_db.py  discr_example.py  sebilleau_2d.lay  tecio_example.py
examples/figs/eps/: horizontale_profile_of_tt-uu-vv-ww.eps  horizontale_profile_of_uu-vv-ww.eps  verticale_profile_of_tt.eps  verticale_profile_of_uu-vv-ww.eps
spec_forge/: __init__.py  spectral_tools.py
stats/: Sebilleau_loader.py  __init__.py  statistics_loader.py
tecio/: CMakeLists.txt  __init__.py  tecio_wrapper.cpp
tecio_wrapper/: CMakeLists.txt  __init__.py  tecio_wrapper.cpp
tests/: __init__.py  test_spec_forge.py
